# VoxelCubed

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: Block.h  BlockRegistry.h  Chunk.h  GameScene.h  Globals.h  MainMenuScene.h  ResourceManager.h  Scene.h  SceneManager.h  World.h
src/: BlockRegistry.cpp  GameScene.cpp  MainMenuScene.cpp  SceneManager.cpp  World.cpp  main.cpp
